# jenness_battle_simulator

./: .gitignore  README.md  baddies.py  battle_engine.py  bulk_run.py  constants.py  exceptions.py  generate_benchmarks.py  goodies.py  main.py  mechanics.py  npcs.py  pcs.py  pyproject.toml  requirements.txt  scenarios.json  simulation_results.txt  stats.py  strategies.py
reports/: balance_report_benchmarks.md  robustness_benchmark.md
tests/: test_battle_engine.py  test_mechanics.py  test_validation.py
