[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jenness-battle-simulator"
version = "1.0.0"
authors = [
  { name="Jenness", email="your-email@example.com" },
]
description = "A statistical simulation engine for tabletop RPG combat encounters."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/jenness_battle_simulator"
