[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jenness-battle-simulator"
version = "1.0.0"
authors = [
  { name="cubeof2", email="cubeof2@gmail.com" },
]
description = "A statistical simulation engine for tabletop RPG combat encounters."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cubeof2/jenness_battle_simulator"
